# rust-search-cli

./: .gitignore  Cargo.toml  PERFORMANCE.md  README.md
src/: error.rs  main.rs  output.rs  search.rs  walker.rs
