[package]
name = "rust-search-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
rayon = "1"
walkdir = "2"
atty = "0.2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
